[tool.poetry]
name = "Roblox-Ad-Crawler"
description = "A simple Roblox ad crawler written in Python."
version = "1.0"
authors = ["UserR3X"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.26.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"